--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -329,6 +329,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = False\n",
+    "filename = \"./input2022/test_day05.txt\" if test else \"./input2022/input_day05.txt\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    file_input = f.read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def translate_stack_input(file_input):\n",
+    "    stacks = {k:[] for k in range (1, 10)}\n",
+    "\n",
+    "    for i, line in enumerate(file_input):\n",
+    "        if line == \"\":\n",
+    "            break\n",
+    "\n",
+    "    setup = file_input[:i]\n",
+    "    moves = file_input[i+1:]\n",
+    "\n",
+    "    move_list = []\n",
+    "    for move in moves:\n",
+    "        next_move = (int(move.split(\" \")[1]), int(move.split(\" \")[3]), int(move.split(\" \")[5]))\n",
+    "        move_list.append(next_move)\n",
+    "\n",
+    "    char_idxs = []\n",
+    "    for i, char in enumerate(setup[-1]):\n",
+    "        if char != \" \":\n",
+    "            char_idxs.append(i)\n",
+    "\n",
+    "    for line in setup[:-1]:\n",
+    "        for i, idx in enumerate(char_idxs):\n",
+    "            if line[idx] != \" \":\n",
+    "                stacks[i+1].append(line[idx])\n",
+    "\n",
+    "    for key, value in stacks.items():\n",
+    "        stacks[key].reverse()\n",
+    "\n",
+    "    return stacks, move_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_stacks(stacks):\n",
+    "    for stack in stacks.items():\n",
+    "        print(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FWNSHLDNZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, line in enumerate(file_input):\n",
+    "        if line == \"\":\n",
+    "            break\n",
+    "\n",
+    "setup = file_input[:i]\n",
+    "moves = file_input[i+1:]\n",
+    "\n",
+    "stacks, move_list = translate_stack_input(file_input)\n",
+    "\n",
+    "for move in move_list:\n",
+    "    num_to_move, stack1, stack2 = move\n",
+    "\n",
+    "    for i in range(num_to_move):\n",
+    "        stacks[stack2].append(stacks[stack1].pop())\n",
+    "\n",
+    "\n",
+    "final_str = \"\"\n",
+    "for stack_val in stacks.values():\n",
+    "    if len(stack_val) > 0:\n",
+    "        final_str += stack_val.pop()\n",
+    "\n",
+    "print(final_str)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RNRGDNFQG\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, line in enumerate(file_input):\n",
+    "        if line == \"\":\n",
+    "            break\n",
+    "\n",
+    "setup = file_input[:i]\n",
+    "moves = file_input[i+1:]\n",
+    "\n",
+    "stacks, move_list = translate_stack_input(file_input)\n",
+    "\n",
+    "for move in move_list:\n",
+    "    num_to_move, stack1, stack2 = move\n",
+    "\n",
+    "    selected_boxes = [stacks[stack1].pop() for x in range(num_to_move)]\n",
+    "    selected_boxes.reverse()\n",
+    "    stacks[stack2] += selected_boxes\n",
+    "\n",
+    "\n",
+    "final_str = \"\"\n",
+    "for stack_val in stacks.values():\n",
+    "    if len(stack_val) > 0:\n",
+    "        final_str += stack_val.pop()\n",
+    "\n",
+    "print(final_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
