--- a/AdventOfCode2022.ipynb
+++ b/AdventOfCode2022.ipynb
@@ -474,11 +474,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test = False\n",
+    "filename = \"./input2022/test_day06.txt\" if test else \"./input2022/input_day06.txt\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    file_input = f.read().split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1343\n"
+     ]
+    }
+   ],
+   "source": [
+    "char_stream = file_input[0]\n",
+    "\n",
+    "char_window = []\n",
+    "for i, char in enumerate(char_stream):\n",
+    "    char_window.append(char)\n",
+    "    if len(char_window) > 4:\n",
+    "        char_window.pop(0)\n",
+    "\n",
+    "    if len(set(char_window)) == 4:\n",
+    "        print(i+1)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2193\n"
+     ]
+    }
+   ],
+   "source": [
+    "char_stream = file_input[0]\n",
+    "\n",
+    "char_window = []\n",
+    "for i, char in enumerate(char_stream):\n",
+    "    char_window.append(char)\n",
+    "    if len(char_window) > 14:\n",
+    "        char_window.pop(0)\n",
+    "\n",
+    "    if len(set(char_window)) == 14:\n",
+    "        print(i+1)\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "code",
